ipc/ipdl/test/ipdl/error/ExtendedAttrBadValue.ipdlh
//error: unexpected value for valueless attribute `RefCounted'

[RefCounted=Invalid] using SomeType from "SomeFile.h";

struct ExtendedAttrBadValue {};